included FGSM attack in deploy

--- a/Deploy.ipynb
+++ b/Deploy.ipynb
@@ -38,8 +38,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Overwriting app.py\n"
           ]
@@ -93,6 +93,22 @@
         "def blur_image(img_tensor, k):\n",
         "    return TF.gaussian_blur(img_tensor, kernel_size=k)\n",
         "\n",
+        "def fgsm_attack(image, epsilon):\n",
+        "    image = image.unsqueeze(0).to(device)\n",
+        "    normalized = transform(transforms.ToPILImage()(image.squeeze(0))).unsqueeze(0).to(device)\n",
+        "    normalized.requires_grad = True\n",
+        "    output = model(normalized)\n",
+        "    loss = nn.CrossEntropyLoss()(output, torch.tensor([1]).to(device))\n",
+        "    model.zero_grad()\n",
+        "    loss.backward()\n",
+        "    perturbed = normalized + epsilon * normalized.grad.sign()\n",
+        "    mean = torch.tensor([0.485,0.456,0.406]).view(1,3,1,1).to(device)\n",
+        "    std = torch.tensor([0.229,0.224,0.225]).view(1,3,1,1).to(device)\n",
+        "    perturbed = perturbed * std + mean\n",
+        "    perturbed = torch.clamp(perturbed, 0, 1)\n",
+        "    return perturbed.squeeze(0).detach().cpu()\n",
+        "\n",
+        "\n",
         "# UI\n",
         "st.title(\"🛡 Deepfake Detection – Robust AI\")\n",
         "\n",
@@ -103,7 +119,7 @@
         "\n",
         "attack_choice = st.sidebar.selectbox(\n",
         "    \"Apply Attack\",\n",
-        "    [\"None\", \"Gaussian Noise\", \"Blur\"]\n",
+        "    [\"None\", \"Gaussian Noise\", \"Blur\", \"FGSM Attack\"]\n",
         ")\n",
         "\n",
         "epsilon = st.sidebar.slider(\"Noise Strength\", 0.0, 0.5, 0.05)\n",
@@ -133,6 +149,10 @@
         "    elif attack_choice == \"Blur\":\n",
         "        img_tensor = blur_image(img_tensor, blur_k)\n",
         "        st.write(\"Applied Blur\")\n",
+        "    \n",
+        "    elif attack_choice == \"FGSM Attack\":\n",
+        "        img_tensor = fgsm_attack(img_tensor, epsilon)\n",
+        "        st.write(\"Applied FGSM attack\")\n",
         "\n",
         "    # Convert tensor back to PIL for prediction pipeline\n",
         "    modified_image = transforms.ToPILImage()(img_tensor)\n",
@@ -176,8 +196,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "NgrokTunnel: \"https://shamanistic-deirdre-noncalculably.ngrok-free.dev\" -> \"http://localhost:8501\"\n"
           ]
@@ -201,16 +221,16 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "WARNING:pyngrok.process.ngrok:t=2026-02-22T14:45:48+0000 lvl=warn msg=\"failed to open private leg\" id=ead28944a4fd privaddr=localhost:8501 err=\"dial tcp [::1]:8501: connect: connection refused\"\n",
             "WARNING:pyngrok.process.ngrok:t=2026-02-22T14:45:48+0000 lvl=warn msg=\"failed to open private leg\" id=33d073afcbda privaddr=localhost:8501 err=\"dial tcp [::1]:8501: connect: connection refused\"\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Your Streamlit App URL: NgrokTunnel: \"https://shamanistic-deirdre-noncalculably.ngrok-free.dev\" -> \"http://localhost:8501\"\n"
           ]
